fix tickets text overflow

--- a/src/components/Ticket/ticket.css
+++ b/src/components/Ticket/ticket.css
@@ -8,6 +8,7 @@
 }
 
 .ticket__info{
+    overflow: hidden;
     display: flex;
     flex-direction: column;
     gap: 10px;
